--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="loginBtn">Login</string>
     <string name="registerBtn">Register</string>
     <string name="createAccountBtn">Create My Account!</string>
-    <string name="joinCareerTinder">Join Career Tinder now!</string>
+    <string name="joinCareerTinder">JOIN CAREER TINDER NOW!</string>
     <string name="fullNameText">Full Name</string>
     <string name="emailAddressText">Email Address</string>
     <string name="passwordText">Password</string>
@@ -11,5 +11,10 @@
     <string name="userTypeText">I am:</string>
     <string name="studentText">a Job Seeker</string>
     <string name="companyText">an Employer</string>
+    <string name="addNewJobOpeningText">ADD A NEW JOB OPENING</string>
+    <string name="createJobOpeningText">Create Job Opening!</string>
+    <string name="jobTitleText">Job Title</string>
+    <string name="desiredSkillsText">Desired Skills</string>
+
 
 </resources>
