#10 - Adapter set up for Job Openings List. API Integration complete and verified with backend test.

--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="desiredCandidateText">DESIRED CANDIDATE PROFILE</string>
     <string name="desiredLanguagesText">Desired Language Skills</string>
     <string name="languageText">Language</string>
+    <string name="jobOpenings">JOB OPENINGS</string>
 
     <string-array name="city_array">
         <item>Nuremberg</item>
