--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -21,10 +21,22 @@
     <string name="placeOfWorkText">Place of Work</string>
     <string name="jobDescriptionText">Job Description</string>
     <string name="nameOfYourCompanyText">Name of your Company</string>
-    <string name="desiredCandidateText">DESIRED CANDIDATE PROFILE</string>
+    <string name="nameOfCompanyText">Name of  Company</string>
+    <string name="desiredCandidateText">Desired Candidate Profile</string>
     <string name="desiredLanguagesText">Desired Language Skills</string>
     <string name="languageText">Language</string>
     <string name="jobOpenings">JOB OPENINGS</string>
+    <string name="accept">Accept</string>
+    <string name="reject">Reject</string>
+
+    <string name="nav_header_title">FirstName LastName</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="menu_job_search">Job Search</string>
+    <string name="menu_edit_profile">Edit Profile</string>
+    <string name="menu_logout">Log Out</string>
+    <string name="navigation_drawer_open">OPEN</string>
+    <string name="navigation_drawer_close">CLOSE</string>
 
     <string-array name="city_array">
         <item>Nuremberg</item>
