#19 - Update Job Opening functionality completed. API integration done.

--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="studentText">a Job Seeker</string>
     <string name="companyText">an Employer</string>
     <string name="addNewJobOpeningText">ADD A NEW JOB OPENING</string>
+    <string name="updateJobOpening">UPDATE JOB OPENING</string>
     <string name="createJobOpeningText">Create Job Opening!</string>
     <string name="jobTitleText">Job Title</string>
     <string name="desiredSkillsText">Desired Skills</string>
