Activities renamed to conform to standards. Work on Company Dashboard started. Company job list UI improvements.

--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="userTypeText">I am:</string>
     <string name="studentText">a Job Seeker</string>
     <string name="companyText">an Employer</string>
-    <string name="addNewJobOpeningText">ADD A NEW JOB OPENING</string>
+    <string name="addNewJobOpeningText">CREATE NEW</string>
     <string name="updateJobOpening">UPDATE JOB OPENING</string>
     <string name="createJobOpeningText">Create Job Opening!</string>
     <string name="jobTitleText">Job Title</string>
