--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="contactEmailText">Contact Email</string>
     <string name="updateJobOpeningText">Update Job Opening</string>
     <string name="viewMatchesText">View Matches</string>
+    <string name="emailExampleText">companyname@example.com</string>
 
     <string name="nav_header_title">FirstName LastName</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
