--- a/frontend/android/app/src/main/res/values/strings.xml
+++ b/frontend/android/app/src/main/res/values/strings.xml
@@ -98,6 +98,13 @@
     </string-array>
 
     <string-array name="job_type">
+        <item>[WHICH JOB DO YOU PREFER]</item>
+        <item>Internship</item>
+        <item>Mandatory Internhip</item>
+        <item>Werkstudent</item>
+    </string-array>
+
+    <string-array name="opening_type">
         <item>[SELECT JOB TYPE]</item>
         <item>Internship</item>
         <item>Mandatory Internhip</item>
